# cve-bench

./: .env.example  .env.sample.solution  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  prompt.py  pyproject.toml  run  run.sh
.claude/: CLAUDE.md
.github/workflows/: target-health.yml
cvebench/evaluations/: billing_grader.py  evaluator.py  fluent_bit_grader.py  froxlor_grader.py  genie_grader.py  grader.py  llama_cpp_python_grader.py  lollms_grader.py  payroll_grader.py  prestashop_grader.py  seacms_grader.py  spage_grader.py  stalwart_grader.py  stock_grader.py  suitecrm_grader.py  wordpress_grader.py  wp_htmega_grader.py  zabbix_grader.py
cvebench/metadata/: CVE-2023-37999.yml  CVE-2024-22120.yml  CVE-2024-25641.yml  CVE-2024-2771.yml  CVE-2024-31611.yml  CVE-2024-3234.yml  CVE-2024-32980.yml  CVE-2024-32986.yml  CVE-2024-34070.yml  CVE-2024-34340.yml  CVE-2024-34359.yml  CVE-2024-34716.yml  CVE-2024-35187.yml  CVE-2024-36412.yml  CVE-2024-36675.yml  CVE-2024-36858.yml  CVE-2024-37388.yml  CVE-2024-37831.yml  CVE-2024-37849.yml  CVE-2024-4223.yml  CVE-2024-4323.yml  CVE-2024-4701.yml  CVE-2024-5314.yml  CVE-2024-5315.yml
cvebench/targets/CVE-2023-37999/: .env  README.md  docker-compose.yml
cvebench/targets/CVE-2023-51483/: .env  README.md  docker-compose.yml
cvebench/targets/CVE-2024-22120/: .env  README.md  docker-compose.yml
cvebench/targets/CVE-2024-2359/: README.md  docker-compose.yml
cvebench/targets/CVE-2024-25641/: .env  README.md  docker-compose.yml
cvebench/targets/CVE-2024-2624/: README.md  docker-compose.yml
cvebench/targets/CVE-2024-2771/: .env  README.md  docker-compose.yml
cvebench/targets/CVE-2024-30542/: .env  README.md  docker-compose.yml
cvebench/targets/CVE-2024-31611/: .env  README.md  docker-compose.yml
cvebench/targets/CVE-2024-32167/: .env  README.md  docker-compose.yml
cvebench/targets/CVE-2024-3234/: .env  README.md  docker-compose.yml
runs/20260411_cvebench_claude-opus-4-6/: metadata.yml
scripts/: bump.sh  convert.py  get_expose_services.py  metadata.py  prompt.py
src/common/evaluations/: anythingllm_grader.py  billing_grader.py  cacti_grader.py  dolibarr_grader.py  froxlor_grader.py  genie_grader.py  lollms_grader.py  omos_grader.py  opencart_grader.py  payroll_grader.py  prestashop_grader.py  pyproject.toml  seacms_grader.py  spage_grader.py  spin_grader.py  stock_grader.py  suitecrm_grader.py  wp_fluent_forms_grader.py  wp_htmega_grader.py  zabbix_grader.py
src/common/evaluations/common/: done.py  done.sh  entrypoint.sh  evaluator.py  grader.py  health.py  health.sh  outbound_server.py  utils.py  wordpress_grader.py
src/common/evaluations/src/: create_process.sh  done.py  entrypoint.sh  evaluator.py  grader.py  outbound_server.py  utils.py  wordpress_grader.py
src/cvebench/: agent.py  cvebench.py  dataset.py  utils.py
test/: test_healthy.sh
(+425 files in other folders)
